# clementine

./: .clang-format  .editorconfig  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeSettings.json  Doxyfile  LICENSE  README-cn.md  README.md  README_cn.md  README_zh-CN.md  _a_entity_8h_source.html  _a_scene_8h_source.html  _application_8h_source.html  _archtype_8h_source.html  _assert_8h_source.html  _audio_8h_source.html  _box_collider_8h_source.html  _camera_8h_source.html  _char_map_8h_source.html  _chunk_8h_source.html  _circle_collider_8h_source.html  _clem_8h_source.html  _client_8h_source.html  _collider_8h_source.html  _component_8h_source.html  _component_serializer_8h_source.html  _components_8h_source.html  _connection_8h_source.html  _console_window_8h_source.html  _core_2_math_2_color_8h_source.html  _core_8h_source.html  _cursor_8h_source.html  _develop_menu_8h_source.html  _e_c_s_8h_source.html  _entity_8h_source.html  _event_8h_source.html  _event_dispatcher_8h_source.html  (+436 more)
Docs/: Compiling.md  (+1 more)
Editor/: CMakeLists.txt  Editor.cpp  Editor.h  main.cpp
Engine/: CMakeLists.txt
Engine/Audio/: ALCheck.cpp  ALCheck.h  Audio.cpp  Audio.h  Device.cpp  Device.h  Listener.cpp  Listener.h  Sound.cpp  Sound.h  Source.cpp  Source.h
Engine/Core/: Time.hpp  Time.inl
Engine/ECS/: Archetype.hpp  Array.hpp  Entity.hpp  Registry.cpp  Registry.h  TypeIndex.hpp  View.hpp
Engine/Event/: Emitter.hpp  Emitter.inl
Engine/Input/: ChordTrigger.cpp  ChordTrigger.h  KeyTrigger.cpp  KeyTrigger.h  Mapping.cpp  Mapping.h  Trigger.cpp  Trigger.h
Engine/Physics/: Algorithm.hpp  BoxCollider.cpp  BoxCollider.h  BoxCollider.inl  CapsuleCollider.cpp  CapsuleCollider.h  Collider.h  Rigidbody.cpp  Rigidbody.h  SphereCollider.cpp  SphereCollider.h  SphereCollider.inl
Examples/: CMakeLists.txt
Examples/2048/: 2048.cpp  premake5.lua
Examples/Editor/: Editor.cpp  premake5.lua
Examples/Wargame/: Wargame.cpp  premake5.lua
Examples/assets/shaders/: forward.frag  forward.frag.glsl  forward.vert  forward.vert.glsl  geometry.frag  geometry.vert  geometry.vert.glsl  lighting.frag  lighting.frag.glsl  lighting.vert  shadow.frag  shadow.frag.glsl  shadow.vert  skybox.vert  skybox_cube.frag  skybox_cube.vert  skybox_sphere.frag  skybox_sphere.vert  standard.frag  standard.vert
Examples/gamepad/: gamepad.cpp  premake5.lua
Examples/gobang/: gobang.cpp  premake5.lua
Examples/minesweeper/: minesweeper.cpp  premake5.lua
Examples/pong/: imgui.ini  pong.cpp  premake5.lua
Examples/sort/: imgui.ini  premake5.lua  sort.cpp
Examples/sound/: premake5.lua  sound.cpp
clem/: .event.h.swp  .renderer.h.swp  CMakeLists.txt  README_zh-CN.md  assert.h  attribute.cpp  attribute.h  camera.cpp  camera.cpp_  camera.h  clem.hpp  color.cpp  color.cpp_  color.h  color.h_  common_renderer.cpp  common_renderer.h  component.cpp  component.h  controller.cpp  controller.h  cursor.cpp  cursor.h  director.cpp  director.h  entity.cpp  entity.h  event.cpp  event.h  factor.cpp  factor.h  frame_buffer.cpp  frame_buffer.h  input.cpp  input.h  keyboard_input.cpp  keyboard_input.h  log.cpp  log.h  logger.cpp  (+32 more)
clem/deprecated/: observable.cpp  observable.h  observer.h  texture.cpp  texture.h
clem/input/: controller.h  gamepad.cpp  gamepad.h  gamepad_event.cpp  gamepad_event.h  input.cpp  input.h  input_component.h  keyboard.cpp  keyboard.h  keyboard_input.h  mouse.cpp  mouse.h
clem/input/deprecated/: gamepad.cpp  gamepad.h  gamepad_event.cpp  gamepad_event.h  input.h_  keyboard_input.cpp  keyboard_input.h
clem/math/: point.cpp  point.h  vec2.cpp  vec2.h
clem/net/: address.cpp  address.h  header.h  udp_socket.cpp  udp_socket.h
clem/physics/: box_collider.cpp  box_collider.h  circle_collider.cpp  circle_collider.h  collider.cpp  collider.h  physics_body.h  physics_shape.h  physics_shape_box.h  physics_shape_circle.h  physics_world.h  rigidbody.cpp  rigidbody.h  shape.h  shape_box.cpp  shape_box.h  shape_circle.h
clem/physics/deprecated/: body.h  shape.h  shape_box.cpp  shape_box.h  shape_circle.h  world.h
clem/serialize/: serializable.h
clem/type/: point.cpp  point.h  rect.cpp  rect.h  size.cpp  size.h  tile.cpp  tile.h  vec2.cpp  vec2.h  vector.cpp  vector.h
source/editor/: CMakeLists.txt  main.cpp
source/engine/: CMakeLists.txt
source/engine/audio/: al_check.cpp  al_check.h  device.cpp  device.h  listener.cpp  listener.h  sound.cpp  sound.h  source.cpp  source.h
source/engine/core/: check.hpp  emitter.hpp  emitter.inl  platform.h
src/clem/: CMakeLists.txt  Core.h  Log.cpp  Log.h  Math.h  Platform.h  Profiler.cpp  Profiler.h  Random.cpp  Random.h  Scene.h  Window.cpp  Window.h  camera.cpp  camera.h  component.cpp  component.h  cursor.cpp  director.cpp  director.h  event.cpp  event.h  factor.h  frame_buffer.cpp  frame_buffer.h  log.cpp  log.h  platform.h  profiler.cpp  profiler.h  random.cpp  random.h  scene.cpp  scene.h  sprite.cpp  sprite.h  tags  terminal.cpp  tile.h  type.h
src/clem/Core/: Application.cpp  Application.h  Component.cpp  Component.h  Entity.cpp  Entity.h  Main.cpp  Main.h  Scene.cpp  Scene.h  Sprite.cpp  Sprite.h
src/clem/Math/: Point.cpp  Point.h  Size.cpp  Size.h  Vec2.cpp  Vec2.h  Vector2.cpp  Vector2.h
src/clem/Scene/: Component.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  Sprite.cpp  Sprite.h
src/clem/deprecated/: observer.h
src/clem/input/: controller.h  input_component.h  keyboard.h  mouse.cpp
src/clem/math/: point.cpp  point.h  vec2.cpp  vec2.h
src/clem/net/: udp_socket.h
src/clem/physics/: box_collider.cpp  box_collider.h  circle_collider.cpp  circle_collider.h  collider.cpp  collider.h  rigidbody.h
src/clem/type/: rect.cpp
src/editor/: CMakeLists.txt  main.cpp
src/editor/shaders/: pbr.frag.glsl  pbr.vert.glsl
src/engine/: CMakeLists.txt
src/engine/app/: application.hpp  config.hpp  engine.hpp
src/engine/audio/: al_check.h  al_check.hpp  device.cpp  device.h  listener.cpp  listener.h  listener.hpp  sound.cpp  sound.hpp  source.cpp  source.hpp  wav_reader.cpp
tests/: CMakeLists.txt  benchmark.cpp  main.cpp  math.cpp  math_test.cpp
(+1707 files in other folders)
