# Copyright 2020 SMS
# License(Apache-2.0)

add_executable(2048 "2048/2048.cpp")
target_link_libraries(2048 clementine)

#add_executable(gamepad "gamepad/gamepad.cpp")
#target_link_libraries(gamepad clementine)

#add_executable(gobang "gobang/gobang.cpp")
#target_link_libraries(gobang clementine)

#add_executable(minesweeper "minesweeper/minesweeper.cpp")
#target_link_libraries(minesweeper clementine)

#add_executable(pong "pong/pong.cpp")
#target_link_libraries(pong clementine)

#add_executable(sort "sort/sort.cpp")
#target_link_libraries(sort clementine)

#add_executable(sound "sound/sound.cpp")
#target_link_libraries(sound clementine)
